--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "password-encryptor"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 description = "A helper for encrypting and validating password"
 license = "MIT"
-
+readme = "README.md"
+keywords = ["password","ecryption","auth","encrypt","decrypt","validate"]
+repository = "https://github.com/nikola-bozin-org/password-encryptor"
 
 [dependencies]
 base64-url = "2.0.2"
