--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.4"
 edition = "2021"
 description = "A helper for encrypting and validating password"
 license = "MIT"
-readme = "README.md"
+readme = "readme.md"
 keywords = ["password","ecryption","auth","encrypt","decrypt","validate"]
 repository = "https://github.com/nikola-bozin-org/password-encryptor"
 
