--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "password-encryptor"
-version = "0.1.4"
+version = "1.0.0"
 edition = "2021"
-description = "A helper for encrypting and validating password"
+description = "A helper crate for encrypting and validating password"
 license = "MIT"
 readme = "readme.md"
 keywords = ["password","ecryption","auth","encrypt","decrypt"]
